# NipaPlay-Reload

./: .fvmrc  .gitignore  .gitmodules  CLAUDE.md  README.md  build-arm64.sh  build_and_copy_web.sh  l10n.yaml  pubspec.yaml  thin-payload.sh
.github/patches/: libmpv-darwin-build-macos-hdr-target-arch.patch
.github/workflows/: build-android.yml  build-apk-on-commit.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  erika-windows-native-smoke.yml  main.yml  release-ci-smoke.yml  release-notes-dry-run.yml
CONTRIBUTING_GUIDE/: 00-Introduction.md  02-Project-Structure.md  08-Adding-a-New-Player-Kernel.md  12-Bounty-Board.md
Documentation/: index.md  js-plugin-api.md  release-channels.md  settings.md
android/: build.gradle  gradle.properties
android/app/: build.gradle  proguard-rules.pro
cpp_native/: .gitignore  CMakeLists.txt  README.md
cpp_native/include/nipaplay_native/: export.h  nipaplay_native.h  types.h
cpp_native/modules/: danmaku_layout.h  danmaku_parser.h  example_calculator.h  similarity_engine.h
cpp_native/scripts/: build_ios.sh  build_macos.sh
cpp_native/src/: danmaku_layout.cpp  danmaku_parser.cpp  example_calculator.cpp  nipaplay_native.cpp  pinyin_dict.cpp  similarity_engine.cpp  string_utils.cpp
cpp_native/test/: test_danmaku_parser.cpp
data/: messages.sqlite3  state.json
docs/: ARCHITECTURE_DECOUPLING_TODO.md
ios/: Podfile
ios/Flutter/: Debug.xcconfig
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: adaptive_app_page_content.dart  app_display_surface.dart  app_display_surface_scope.dart  app_navigation_scope.dart  app_page_component.dart  app_page_ids.dart  unified_app_actions.dart  unified_app_pages.dart  unified_app_view_presenter.dart  unified_app_virtual_windows.dart  unified_home_components.dart  unified_media_library_sections.dart
lib/constants/: acknowledgements.dart  media_extensions.dart  settings_keys.dart
lib/controllers/: user_activity_controller.dart
lib/cpp_native/: native_arena.dart  native_library.dart  nipaplay_native.dart
lib/danmaku_abstraction/: danmaku_kernel_factory.dart  positioned_danmaku_item.dart
lib/danmaku_dfm/: dfm_plus_layout_bridge.dart  dfm_plus_overlay.dart
lib/danmaku_next/: danmaku_atlas_painter.dart  danmaku_sprite_atlas.dart  msdf_danmaku_painter.dart  msdf_text_renderer.dart  next2_emoji_pipeline.dart  next2_layout_bridge.dart  next2_overlay_viewport.dart  next2_platform_support.dart  next2_texture_bridge.dart  nipaplay_next2_overlay.dart  nipaplay_next_canvas_painter.dart  nipaplay_next_engine.dart  nipaplay_next_old_canvas_painter.dart  nipaplay_next_old_engine.dart  nipaplay_next_old_overlay.dart  nipaplay_next_overlay.dart
lib/downloads/: adaptive_torrent_download_dialogs.dart  unified_torrent_page_model.dart
lib/l10n/: app_en.arb  app_locale_utils.dart  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb  app_zh_Hant.arb
lib/media_library/: adaptive_library_management_overview.dart  adaptive_media_collection_view.dart  adaptive_media_library_controls.dart  adaptive_media_library_page.dart  adaptive_media_library_primitives.dart  media_collection_empty_content.dart  media_source_option.dart  unified_library_management_model.dart
lib/models/: danmaku_auto_load_strategy.dart  emby_model.dart  external_player_danmaku_item.dart  external_player_session.dart  jellyfin_model.dart  playable_item.dart  playback_detail_context.dart  shared_remote_library.dart  torrent_magnet_preview.dart  torrent_task.dart  torrent_task_scan_summary.dart  watch_history_model.dart
lib/pages/: anime_detail_page.dart  anime_page.dart  dashboard_home_page.dart  desktop_pip_window_app.dart  external_player_console_app.dart  external_player_console_page.dart  media_library_page.dart  media_server_detail_page.dart  new_series_page.dart  tab_labels.dart  (+4 more)
linux/: CMakeLists.txt
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/cpp/similarity/src/: similarity_engine.cpp  similarity_engine.h
rust/src/: frb_generated.rs  lib.rs  next2_android_jni.rs  next2_engine.rs
rust/src/api/: ass_converter.rs  danmaku_analytics.rs  dfm_plus.rs  media_metadata.rs  media_probe.rs  mod.rs  next2.rs  performance.rs  similarity.rs  torrent.rs
rust/src/dfm_core/: filters.rs  measure.rs  model.rs  retainer.rs
rust/src/next2_engine/: engine.rs  ffi.rs  present.rs
rust/src/next2_engine/engine/: frame.rs  renderer_core.rs  renderer_draw.rs  rendering.rs  runtime.rs  shaders.rs
rust_builder/: pubspec.yaml
rust_builder/linux/: CMakeLists.txt  rust_lib_nipaplay_plugin.cc
rust_builder/linux/include/rust_lib_nipaplay/: rust_lib_nipaplay_plugin.h
rust_builder/windows/: CMakeLists.txt  rust_lib_nipaplay_plugin.cpp  rust_lib_nipaplay_plugin.h  rust_lib_nipaplay_plugin_c_api.cpp
rust_builder/windows/include/rust_lib_nipaplay/: rust_lib_nipaplay_plugin_c_api.h
scripts/: count_dialogue_chars_sentences.py
test/: about_settings_content_test.dart  blur_dropdown_test.dart  cupertino_adaptive_alert_dialog_test.dart  cupertino_glass_navigation_insets_test.dart  danmaku_ass_converter_test.dart  danmaku_auto_load_strategy_test.dart  danmaku_density_analyzer_test.dart  danmaku_model_test.dart  danmaku_pipeline_test.dart  danmaku_repository_test.dart  danmaku_sink_test.dart  danmaku_style_test.dart  danmaku_xml_utils_test.dart  desktop_exit_handler_test.dart  external_player_console_service_test.dart  external_player_session_lifecycle_test.dart  external_player_session_test.dart  large_screen_focusable_action_test.dart  media_metadata_utils_test.dart  media_path_name_test.dart  media_source_utils_test.dart  network_media_server_dialog_test.dart  player_control_style_test.dart  player_lifecycle_test.dart  player_menu_definition_builder_test.dart  poster_blur_and_fast_playback_test.dart  random_recommendation_service_test.dart  remote_control_settings_test.dart  tag_search_controller_test.dart  tooltip_bubble_test.dart  torrent_download_service_test.dart  unified_app_architecture_test.dart
windows/: CMakeLists.txt
(+462 files in other folders)
