[package]
name = "rust_lib_nipaplay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
libc = "0.2"
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = "1"
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
