[package]
name = "rust_lib_nipaplay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = "1"
serde_json = "1"
base64 = "0.22.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
wgpu = "27.0.1"
pollster = "0.4.0"
fdsm = { version = "0.8.0", default-features = false }
fdsm-ttf-parser = "0.2.0"
ttf-parser = "0.25.1"
image = { version = "0.25.6", default-features = false }
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
rustc-hash = "2"
smallvec = "1"
regex = "1"
aho-corasick = "1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu-hal = { version = "27.0.4", features = ["metal"] }
metal = "0.32.0"

[target.'cfg(target_os = "windows")'.dependencies]
librqbit = { version = "8.1.1", default-features = false, features = ["default-tls"] }
wgpu-hal = { version = "27.0.4", features = ["dx12"] }
windows = { version = "0.58", features = [
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu-hal = { version = "27.0.4", features = ["gles"] }

[target.'cfg(target_os = "android")'.dependencies]
jni-sys = "0.4.1"
ndk-sys = "0.6.0+11769913"
raw-window-handle = "0.6.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# ──── Release 编译优化（全平台 FFI 库）────
# 注意兼容性：
# - panic = "unwind"（保持默认）：next2_engine/ffi.rs + engine/runtime.rs 使用
#   std::panic::catch_unwind 做 FFI 边界 panic 防护，panic=abort 会让 catch_unwind
#   失效（行为未定义/直接 abort），破坏 FFI 安全性。必须保持 unwind。
# - lto = "thin"：薄 LTO，跨 crate 内联 + CI 编译时间友好（fat LTO 在 wgpu/nalgebra
#   等大依赖上编译时间过长，CI 可能超时）。thin 仍能跨 crate 内联 fdsm/nalgebra/image。
# - codegen-units = 1：单编译单元，最大优化深度（牺牲编译时间换运行时性能）。
# - strip = "symbols"：剥离符号减体积（cdylib/staticlib 全平台安全，dSYM 在编译时
#   独立生成不受影响；iOS staticlib 的符号在 app 链接时由 Xcode 统一处理）。
# - debug = false：不生成调试信息（release 默认已 false，显式声明减体积）。
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = "symbols"
debug = false
